--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <ul>
   <li>Warwick University MBA</li>
   <li>Univesity of Ibadan Bsc.</li>
-  <h3>Work Experiance</h3>
+  <h3>Work Experiance</h3><br>
   <table>
     <thead>
       <tr>
