--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 <h3>Education</h3>
 <ul>
   <li>Warwick University MBA</li>
-  <li>Univesity of Ibadan Bsc.</li>
-  <h3>Work Experiance</h3><br>
+  <li>Univesity of Ibadan Bsc.</li><br>
+  <h3>Work Experience</h3>
   <table>
     <thead>
       <tr>
