--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 <h3>Education</h3>
   <ul>
     <li>Warwick University MBA</li>
-    <li>Univesity of Ibadan Bsc.</li><br>
- <h3>Work Experience</h3>
+    <li>Univesity of Ibadan Bsc.</li>
+ <h2>Work Experience</h2>
   <table>
      <thead>
        <tr>
