--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <table cellspacing="30">
    <tr>
     <td><img src="kunle.jpeg" alt="kunle's profile picture"></td>
-     <td><h1>Esho Oyekunle</h1>
+     <td>
+       <h1>Esho Oyekunle</h1>
      <p><em>Solution Architect <a href="https://www.linkedin.com/in/kunle-esho-08810343/">Linkedin</a></em></p>
      <p>I am a solution Architect, I love reading and travelling</p>
      </td>
@@ -19,6 +20,7 @@
   <ul>
     <li>Warwick University MBA</li>
     <li>Univesity of Ibadan Bsc.</li>
+  </ul>
  <h3>Work Experience</h3>
   <table>
      <thead>
@@ -39,6 +41,6 @@
  <hr>
   <h3><a href="hobbies.html">Hobbies</a></h3>
   <h4><a href="contact-me.html">Contact Me</a></h4>
- </ul>
+
 </body>
 </html>
